--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.58",
     "@react-email/components": "0.0.25",
+    "ai": "^3.3.28",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.6.1",
     "next": "14.2.7",
